themes/startwords/assets/scss/issue/_single.scss
/* single issue page styles */

/* secondary shadow text runs off the page, which makes
   the page horizontally scrollable on iOS; disable that here */
html, body.issue, body.home {
    position: relative;
    overflow-x: hidden;
    max-width: 100vw;
}

body.issue {
    // issue summary display similar to homepage
    .issue-summary {
        padding-top: rem(45px);
        min-height: 100vh;

        // summary is a <div> containing rich text here
        .summary {
            margin: 0;
            & > p { margin-top: rem(5px); }

            // introduction authors
            address {
            display: inline;
            font-style: normal;
            color: $black;
            }

            .translators {
                margin-left: 1.2em;
                margin-top: rem(8px);
                font-style: italic;
            }
        }
    }

    // link to scroll down
    .chevron {
        display: block;
        color: $purple;
        grid-column: 3 / 9;
        margin: rem(100px) 0;

        img {
            display: block;
            margin: 0 auto;
            transition: all 0.2s ease;
        }

        &:hover,
        &:focus {
            img {
                transform: translateY(5px);
            }
        }
    }

    // list of featured content
    #features {
        min-height: calc(100vh - #{$footer-height});

        > .wide-container {
            padding-top: 10vh;
        }
    }

    // inverted footer
    main + footer {
        @include inverted-footer;
        background: $off-white;
    }
}

// snippets section: on single issue and home page
.snippets {
    float: left;
    width: 100%;
}

.snippets, body.issue .masthead {

    h2 {
        font-weight: 300;
        font-size: rem(18px);
        font-variant: small-caps;
        letter-spacing: 0.25rem;
        margin-top: rem(30px);
        margin-bottom: rem(10px);
        @media (min-width: $breakpoint-m) { font-size: rem(20px); }
    }

    ul { list-style: none; }
}

